--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>SymBNB - {% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/app.css">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -18,6 +19,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('ads_index') }}">Annonces</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -28,9 +32,9 @@
         </nav>
         {% block body %}{% endblock %}
 
-        <script src="js/jquery.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/popper.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
