--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -45,20 +45,23 @@
                 </div>
             </div>
             <div class="col">
-                <div class="row">
-                    <div class="col-4">
-                        <img src="http://placehold.it/64x64" alt="Avatar de Joseph">
+                {% set a = ad.author %}
+                <div class="row mb-3 align-items-center">
+                    <div class="col-3">
+                        <a href="{{ path('user_show', {'slug': a.slug}) }}">
+                            <img src="{{a.picture}}" class="avatar avatar-medium" alt="Avatar de {{a.fullName}}">
+                        </a>
                     </div>
                     <div class="col">
-                        <h3>Joseph Dupont</h3>
+                        <a href="{{ path('user_show', {'slug': a.slug}) }}">
+                            <h3>{{a.fullName}}</h3>
+                        </a>
                         <span class="badge badge-primary">
-                            3 annonces
+                            {{a.ads | length }} annonces
                         </span>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, laboriosam. Nostrum alias dignissimos optio animi eius dolorem beatae molestiae officiis.</p>
-                <p>Sequi officiis in odit nihil ipsam accusantium? Officia, facilis ea, deleniti natus obcaecati quos id quae ratione itaque error dolores?</p>
-                <p>Laboriosam modi hic amet natus quisquam, impedit corrupti ducimus eaque fugit ab assumenda ratione praesentium velit nesciunt eos, veniam debitis?</p>
+                {{ a.description | raw }}
             </div>
         </div>
     </div>
