--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,13 +2,13 @@ div.container{
     margin-top:20px;
 }
 
-div.ad-title{
+div.ads-titles{
     padding: 2em;
     background-size:cover;
     background-position:center center;
 }
 
-div.ad-title h1, div.ad-title p{
+div.ads-titles h1, div.ads-titles p{
     color:white;
     text-shadow:3px 3px 3px rgba(0,0,0,0.5);
 }
@@ -31,4 +31,8 @@ div.carousel-caption{
 .avatar-mini{
     max-width: 24px;
     max-height: 24px;
+}
+
+.datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
+    color: firebrick !important;
 }
