--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -3,14 +3,14 @@
 {% block title %}{{ ad.title }}{% endblock %}
 
 {% block body %}
-    <div class="ad-title" style="background-image: url({{ ad.coverImage }})">
+    <div class="ads-titles" style="background-image: url({{ ad.coverImage }})">
         <div class="container">
             <h1>{{ ad.title }}</h1>
             <p>{{ ad.introduction }}</p>
             <p class="h2">
                 <strong>{{ ad.rooms }}</strong> pour <strong>{{ ad.price }}&euro;</strong> par nuit
             </p>
-            <a href="#" class="btn btn-primary">Réserver !</a>
+            <a href="{{ path('booking_create', {'slug': ad.slug}) }}" class="btn btn-primary">Réserver !</a>
             {% if app.user and app.user == ad.author %}
                 <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
                 <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger" 
